# FileUpload

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controllers/: mod.rs  upload.rs
backend/src/routers/: mod.rs  upload.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
frontend/src/services/: api.rs
